// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reactions should add data to the tree 1`] = `
Object {
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should add data to the tree 2`] = `
Object {
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
          "requiredRoles": Array [
            "Support",
          ],
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should add data to the tree 3`] = `
Object {
  "bot-development": Object {
    "😘️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "emoji": "😘️",
          "event": "REACTION_ADD",
          "requiredRoles": Array [
            "Developer",
          ],
        },
      },
    ],
  },
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "description": "test",
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
          "requiredRoles": Array [
            "Support",
          ],
        },
      },
    ],
  },
  "bot-test-channel": Object {
    "😘️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "description": "test",
          "emoji": "😘️",
          "event": "REACTION_ADD",
          "requiredRoles": Array [
            "Developer",
          ],
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should extract reaction from direct message 1`] = `
Object {
  "handlerKeys": Array [
    "channel-id",
    undefined,
  ],
  "isDirectMessage": true,
  "member": null,
}
`;

exports[`Reactions should extract reaction from public channel 1`] = `
Object {
  "handlerKeys": Array [
    "guild-channel",
    undefined,
  ],
  "isDirectMessage": false,
  "member": Object {
    "deleted": false,
    "displayName": "user username",
    "guildID": "guild-id",
    "joinedTimestamp": null,
    "lastMessageChannelID": null,
    "nickname": null,
    "premiumSinceTimestamp": null,
    "userID": "222222222222222200",
  },
}
`;
